--- a/02_end_to_end_machine_learning_project.ipynb
+++ b/02_end_to_end_machine_learning_project.ipynb
@@ -2750,6 +2750,200 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 启动、监控和维护系统\n",
+    "\n",
+    "现在，我们的系统允许启动了！你需要为实际生产作准备，特别是接入实际数据源，并编写测试。\n",
+    "\n",
+    "还需要便携监控代码，以固定间隔检测系统的实时表现，当发生下降时触发警报。这对于系统捕获突然的系统崩溃和性能下降十分重要。做监控很重要，因为模型会随着数据的演化而出现性能下降，除非模型定期用新数据重新训练。\n",
+    "\n",
+    "评估系统的表现，需要对预测值采样并进行评估。这通常需要人来分析。分析者可能是领域专家，或者是众包平台（Amazon Mechanial Turk或CrowdFlower）的工人。不管采用哪种方法，你都需要将人工评估的流水线植入系统之中。\n",
+    "\n",
+    "此外，还需评估系统输入数据的质量。有时因为低质量的数据，系统的表现会逐渐变差，但可能需要一段时间才下降到触发警报的地步。如果监测了系统的输入，就可以尽量早的发现问题。对于线上学习系统，检测输入数据是非常重要的。\n",
+    "\n",
+    "最后，你可能像定期用新数据训练模型。应该尽可能的自动化这个过程。如果不怎么做，你常用可能需要每隔至少六个月更新模型，防止性能严重波动。如果系统是一个线上学习系统，那么需要定期保存系统快照，可以方便地回滚到之前的工作状态。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 实践\n",
+    "\n",
+    "希望这一章能告诉你机器学习项目是什么样的，你能用学到的工具训练一个好系统。你已经 看到，大部分的工作是数据准备步骤、搭建监测工具、建立人为评估的流水线和自动化定期 模型训练，当然，最好能了解整个过程、熟悉三或四种算法，而不是在探索高级算法上浪费 全部时间，导致在全局上的时间不够。\n",
+    "\n",
+    "因此，如果你还没这样做，现在最好拿起台电脑，选择一个感兴趣的数据集，将整个流程从 头到尾完成一遍。一个不错的着手开始的地点是竞赛网站，比如 http://kaggle.com/ ，你会得到一个数据集，一个目标，以及分享经验的人。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 练习\n",
+    "\n",
+    "使用本章的房产数据集：\n",
+    "\n",
+    "1. 尝试一个支持向量机回归器（ `sklearn.svm.SVR` ），使用多个超参数，比如 `kernel=\"linear\"` （多个超参数 C 值）。现在不用担心这些超参数是什么含义。最佳 的 SVR 预测表现如何？\n",
+    "\n",
+    "2. 尝试用 `RandomizedSearchCV` 替换 `GridSearchCV` 。\n",
+    "\n",
+    "3. 尝试在准备流水线中添加一个只选择最重要属性的转换器。\n",
+    "\n",
+    "4. 尝试创建一个单独的可以完成数据准备和最终预测的流水线。\n",
+    "\n",
+    "5. 使用 `GridSearchCV` 自动探索一些准备过程中的候选项。\n",
+    "\n",
+    "练习题答案可以在线上的 [Jupyter notebook](https://github.com/ageron/handson-ml) 找到。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 练习1\n",
+    "\n",
+    "尝试一个支持向量机回归器（ `sklearn.svm.SVR` ），使用多个超参数，比如 `kernel=\"linear\"` （多个超参数 C 值）。现在不用担心这些超参数是什么含义。最佳 的 SVR 预测表现如何？"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 6 candidates, totalling 30 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=4)]: Done  17 tasks      | elapsed:   53.0s\n",
+      "[Parallel(n_jobs=4)]: Done  30 out of  30 | elapsed:  1.6min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "       estimator=SVR(C=1.0, cache_size=200, coef0=0.0, degree=3, epsilon=0.1,\n",
+       "  gamma='auto_deprecated', kernel='rbf', max_iter=-1, shrinking=True,\n",
+       "  tol=0.001, verbose=False),\n",
+       "       fit_params=None, iid='warn', n_jobs=4,\n",
+       "       param_grid=[{'kernel': ['linear'], 'C': [30, 100, 1000, 3000, 10000, 30000]}],\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring='neg_mean_squared_error', verbose=4)"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "param_grid = [\n",
+    "    {'kernel': ['linear'], 'C': [30, 100, 1000, 3000, 10000, 30000]},\n",
+    "]\n",
+    "\n",
+    "svr_reg = SVR()\n",
+    "\n",
+    "grid_search = GridSearchCV(svr_reg, param_grid, cv=5,\n",
+    "                          scoring='neg_mean_squared_error',\n",
+    "                          verbose=4,\n",
+    "                          n_jobs=4)\n",
+    "\n",
+    "grid_search.fit(housing_prepared, housing_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 30000, 'kernel': 'linear'}"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74740.25926865391 {'C': 30, 'kernel': 'linear'}\n",
+      "71388.65765365935 {'C': 100, 'kernel': 'linear'}\n",
+      "70362.53816711278 {'C': 1000, 'kernel': 'linear'}\n",
+      "69988.92304792411 {'C': 3000, 'kernel': 'linear'}\n",
+      "69950.71297890173 {'C': 10000, 'kernel': 'linear'}\n",
+      "69745.45319024987 {'C': 30000, 'kernel': 'linear'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "cvres = grid_search.cv_results_\n",
+    "\n",
+    "for mean_score, params in zip(cvres[\"mean_test_score\"], cvres[\"params\"]):\n",
+    "    print(np.sqrt(-mean_score), params)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以看到最好的结果比起随机森林还要差得多。\n",
+    "C\n",
+    "搜索得到的最佳超参数中的`C`对应这给定范围的最大值，当出现这种情况时，我们可以将最大值增大，同时去掉最小值。可能C值越大，模型会更好。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 练习2\n",
+    "\n",
+    "尝试用 `RandomizedSearchCV` 替换 `GridSearchCV` 。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "from scipy.stats import expon, reciprocal\n",
+    "\n",
+    "param_dict = {\n",
+    "    'kernel': ['linear', 'rbf'],\n",
+    "    'C': reciprocal(20, 200000),\n",
+    "    'gamma': expon(scale=1.0),\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
